--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "cloudinary-react": "^1.3.2",
     "react": "^16.10.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.10.0",
