--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "cloudinary-react": "^1.3.2",
+    "cross-env": "^7.0.2",
+    "env-cmd": "^10.1.0",
     "react": "^16.10.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.10.0",
