--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "bootstrap": "^4.4.1",
     "react": "^16.10.0",
     "react-bootstrap": "^1.0.0-beta.17",
