--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "bootstrap": "^4.4.1",
     "cloudinary-react": "^1.3.2",
     "cross-env": "^7.0.2",
@@ -15,6 +16,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
+    "react-sidenav": "^4.0.6",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
