--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@material-ui/icons": "^4.9.1",
     "@trendmicro/react-sidenav": "^0.5.0",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "cloudinary-react": "^1.3.2",
     "cross-env": "^7.0.2",
     "env-cmd": "^10.1.0",
     "font-awesome": "^4.7.0",
     "react": "^16.10.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-chart": "0.0.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.10.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
