Working on the edit user

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_LOGINAPI = https://uitedemo.herokuapp.com/auth/signin/
 REACT_APP_SIGNUPAPI = https://uitedemo.herokuapp.com/auth/signup/
 REACT_APP_DASHBOARDAPI = https://uitedemo.herokuapp.com/api/users/
+REACT_APP_RECEIPTAPI = https://uitedemo.herokuapp.com/api/receipt/user/
