--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "font-awesome": "^4.7.0",
     "react": "^16.10.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-date-picker": "^7.10.0",
     "react-dom": "^16.10.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "react-sidenav": "^4.0.6",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
