--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-sidenav": "^4.0.6",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "uuid": "^7.0.2"
   },
   "scripts": {
